force-app/main/default/objects/User/fields/clofor_com_cfs__First_name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__First_name__c</fullName>
    <label>First name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>