force-app/main/default/objects/User/fields/clofor_com_cfs__Last_name__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Last_name__c</fullName>
    <label>Last name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>