force-app/main/default/objects/User/fields/clofor_com_cfs__NameEng__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NameEng__c</fullName>
    <inlineHelpText>English name put on Quote for partner(PDF)etc. Input as in the order of firstname, surname.</inlineHelpText>
    <label>名前(英語表記)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>